Minor fix: CSS not showing properly in the badges in the audit page
git-svn-id: https://plugins.svn.wordpress.org/ose-firewall/trunk@1209436 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/css/v4.css
+++ b/public/css/v4.css
@@ -1341,11 +1341,6 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 	border-radius: 0px !important; 	
 }
 
-.label, .badge { 
-	background-color: transparent !important;
-	 text-shadow: none !important;
-}
-
 .onoffswitch-label {
 	padding: 0px !important;
 }
